--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "router-dom": "^2.2.11",
     "sass": "^1.68.0",
     "web-vitals": "^2.1.4"
   },
